--- a/.github/workflows/generate-next-month.yml
+++ b/.github/workflows/generate-next-month.yml
@@ -1,4 +1,4 @@
-name: Generate Next Month Presets
+name: Next-Month Presets
 
 # Controls when the workflow will run
 on:
@@ -14,7 +14,6 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    name: Add presets files
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
@@ -23,5 +22,5 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Run month_presets python script
-        run: python data/month_preset.py
+      - name: Run month-presets python script
+        run: python generate_month_preset.py
