--- a/.github/workflows/next-month-preset.yml
+++ b/.github/workflows/next-month-preset.yml
@@ -25,3 +25,9 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a the next-month preset python script
         run: python data/generate_month_preset.py
+
+      # Commit and Push to repository
+      - name: Commit and Push
+        uses: mikeal/publish-to-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.SECRET_TOKEN }}
